2015-12-10 Giuseppe Salamanna <salaman AT cern.ch>
	* data: add PURWT confog file for new MC15b 410009
	
2015-12-09 David Hohn <david.hohn@cern.ch>
	* add tau substructure variables, electron LH score if overlapping with tau, empty until available in derivation
	* add flat taus, just one for now but is extensible
	* add all tau SFs, uses unreleased code of AnalysisTop so not active yet

2015-12-09 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* include missing variables: HT, HT_lep, HT_jets, sublead/lead_jetPt/Eta/Phi
	* fill empty variables: lep_isTrigMatch_X, lep_sigd0PV_X, lep_Z0SinTheta_X
	
2015-12-08 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: correct name of Btag weight per event
	
2015-12-04 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: added Btag weight per event
	* generic_config-*15.txt changed jet pt and eta selections, changed
	PUrew reference MC file to 410000
	
2015-11-19 David Hohn <david.hohn@cern.ch>
	* take electron LH WP values from derivation, only one electron LH WP available when using PxAODs
	* use default electron selector from AnalysisTop, remove custom electron selector
	* little extra truth protection for taus

2015-11-17 David Hohn <david.hohn@cern.ch>
	* uint64 for counting events number, enable duplicate veto on MC
	* small tau SFs cleanup

2015-11-18 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonElectronLikelihoodDC14: updated confDir to latest (mc15_20150712)
	
2015-11-17 David Hohn <david.hohn@cern.ch>
	* update README with Top,2.3.33

2015-11-11 David Hohn <david.hohn@cern.ch>
	* debugging systematics: selected object containers have unique names now
	* now some new issue with tau truth particle links

2015-11-07 Harish Potti <harish.potti@cern.ch>
	* Added new GRL and IlumiCalc file 
	
2015-11-06 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: moving to getCorrectedMu method for PURWtool
	